--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -47,12 +47,16 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Setup
+    - name: Setup Gtest
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
       id: strings
       shell: bash
-      run: sudo apt-get install libgtest-dev && sudo apt-get install libsfml-dev && git submodule update --init --recursive && git submodule update --recursive --remote
+      run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp lib/*.a /usr/lib && sudo ln -s /usr/lib/libgtest.a /usr/local/lib/libgtest.a && sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/libgtest_main.a 
+    - name: Setup SFML
+      run: sudo apt-get install libsfml-dev
 
+    - name: Synchronize submodules
+      run: git submodule update --init --recursive && git submodule update --recursive --remote
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: cmake -S . -B build && cmake --build build
