--- a/.github/workflows/run-uts.yml
+++ b/.github/workflows/run-uts.yml
@@ -15,7 +15,13 @@ jobs:
         os: [ubuntu-latest]
         build_type: [Release]
         c_compiler: [gcc, clang]
-        cpp_compiler: [g++, clang++]
+        include:
+          - os: ubuntu-latest
+          c_compiler: gcc
+          cpp_compiler: g++
+          - os: ubuntu-latest
+          c_compiler: clang
+          cpp_compiler: clang++
       steps:
       - name: Install gtest
         run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo cmake CMakeLists.txt && sudo make && sudo cp lib/*.a /usr/lib && sudo ln -s /usr/lib/libgtest.a /usr/local/lib/libgtest.a && sudo ln -s /usr/lib/libgtest_main.a /usr/local/lib/libgtest_main.a
