flecs added as submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,10 @@ file(GLOB_RECURSE SOURCES "src/*.cpp")
 file(GLOB_RECURSE RESOURCES "resources/*")
 file(GLOB_RECURSE TESTS "tst/*.cpp")
 
+# Add flecs
+
+add_subdirectory (flecs)
+
 # Create resource files
 
 add_subdirectory(ResourceLoader)
@@ -32,9 +36,13 @@ add_subdirectory(ResourceLoader)
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_include_directories(${PROJECT_NAME} PUBLIC inc ${CMAKE_CURRENT_BINARY_DIR}/inc)
 target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-audio sfml-system sfml-window resources)
+target_link_libraries(${PROJECT_NAME} flecs)
+target_link_libraries(${PROJECT_NAME} flecs_static)
 
 # Tests setup
 
 add_executable(${PROJECT_NAME}_ut ${TESTS})
 target_link_libraries(${PROJECT_NAME}_ut ${GTEST_BOTH_LIBRARIES})
 target_include_directories(${PROJECT_NAME}_ut PUBLIC inc)
+target_link_libraries(${PROJECT_NAME}_ut flecs)
+target_link_libraries(${PROJECT_NAME}_ut flecs_static)
