--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ResourceLoader"]
 	path = ResourceLoader
 	url = git@github.com:Moztanku/ResourceLoader.git
+[submodule "flecs"]
+	path = flecs
+	url = https://github.com/SanderMertens/flecs.git
