--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.27)
 
 project(2_5D_GAME)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # C++ setup
 
@@ -19,7 +20,8 @@ find_package(SFML 2.5 COMPONENTS graphics audio system window REQUIRED)
 
 # Files setup
 
-file(GLOB_RECURSE SOURCES "src/**.cpp" )
+file(GLOB_RECURSE MAIN_GAME "src/main.cpp" )
+file(GLOB_RECURSE GAME_SOURCES "src/game/**.cpp" )
 file(GLOB_RECURSE RESOURCES "resources/*")
 file(GLOB_RECURSE TESTS "tst/*.cpp")
 
@@ -33,15 +35,15 @@ add_subdirectory(ResourceLoader)
 
 # Executable setup
 
-add_executable(${PROJECT_NAME} ${SOURCES})
+add_executable(${PROJECT_NAME} ${GAME_SOURCES} ${MAIN_GAME})
 target_include_directories(${PROJECT_NAME} PUBLIC inc ${CMAKE_CURRENT_BINARY_DIR}/inc)
 target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-audio sfml-system sfml-window resources)
 target_link_libraries(${PROJECT_NAME} flecs_static)
 
 # Tests setup
 
-add_executable(${PROJECT_NAME}_ut ${TESTS})
+add_executable(${PROJECT_NAME}_ut ${TESTS} ${GAME_SOURCES})
 target_link_libraries(${PROJECT_NAME}_ut ${GTEST_BOTH_LIBRARIES})
 target_include_directories(${PROJECT_NAME}_ut PUBLIC inc)
-target_link_libraries(${PROJECT_NAME}_ut flecs)
+target_link_libraries(${PROJECT_NAME}_ut flecs sfml-graphics sfml-audio sfml-system sfml-window resources)
 target_link_libraries(${PROJECT_NAME}_ut flecs_static)
