Loading level, drawing 3d terrain

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,35 @@ include_directories(${GTEST_INCLUDE_DIRS})
 
 find_package(SFML COMPONENTS graphics audio system window REQUIRED)
 
+# GLAD setup
+
+set(VENDOR_DIR ${CMAKE_SOURCE_DIR}/vendor)
+
+set(GLAD_DIR ${VENDOR_DIR}/GLAD)
+set(GLAD_URL "https://gitfront.io/r/Moztanku/8s4L1GHF3Tsc/Resources/raw/glad.zip")
+
+if (NOT EXISTS ${GLAD_DIR})
+    file(DOWNLOAD ${GLAD_URL} ${GLAD_DIR}/glad.zip SHOW_PROGRESS
+        STATUS status)
+
+    list(GET status 0 error_code)
+
+    if (NOT ${error_code} EQUAL 0)
+        file(REMOVE_RECURSE ${GLAD_DIR})
+        message(FATAL_ERROR "Failed to download GLAD, generate it through: 'https://gen.glad.sh/#generator=c&api=gl%3D4.6&profile=gl%3Dcore%2Cgles1%3Dcommon&options=LOADER' and place it in ${GLAD_DIR}")
+    endif()
+
+    execute_process(
+        COMMAND ${CMAKE_COMMAND} -E tar xzf glad.zip
+        WORKING_DIRECTORY ${GLAD_DIR}
+    )
+
+    file(REMOVE ${GLAD_DIR}/glad.zip)
+endif()
+
+add_library(glad STATIC ${GLAD_DIR}/src/gl.c)
+target_include_directories(glad PUBLIC ${GLAD_DIR}/include)
+
 # OpenGL setup
 
 find_package(OpenGL REQUIRED)
@@ -29,7 +58,7 @@ find_package(glm REQUIRED)
 
 # Files setup
 
-set(MAIN_GAME "src/25DGame.cpp")
+set(MAIN_GAME "src/Renderer.cpp")
 set(LEVEL_ED "src/LevelEditor.cpp")
 
 file(GLOB_RECURSE GAME_SOURCES "src/Game/**.cpp" )
@@ -61,22 +90,18 @@ target_include_directories(
 
 target_sources(
     ${PROJECT_NAME} PRIVATE
-        ${GAME_SOURCES}
+        # ${GAME_SOURCES}
         ${RENDERER_SOURCES}
     )
 
 target_link_libraries(
     ${PROJECT_NAME} PRIVATE
-        sfml-graphics 
-        sfml-audio 
-        sfml-system 
-        sfml-window 
-        GL 
-        GLEW 
+        glfw
+        GL
+        glad 
         resources 
         flecs_static
     )
-
 
 # Level editor
 
@@ -102,11 +127,11 @@ target_link_libraries(
 
 # Tests setup
 
-add_executable(${PROJECT_NAME}_ut ${TESTS} ${GAME_SOURCES} ${RENDERER_SOURCES})
-target_link_libraries(${PROJECT_NAME}_ut ${GTEST_BOTH_LIBRARIES})
-target_include_directories(${PROJECT_NAME}_ut PUBLIC inc ${CMAKE_CURRENT_BINARY_DIR}/inc)
-target_link_libraries(${PROJECT_NAME}_ut flecs sfml-graphics sfml-audio sfml-system sfml-window GL GLEW resources)
-target_link_libraries(${PROJECT_NAME}_ut flecs_static)
+# add_executable(${PROJECT_NAME}_ut ${TESTS} ${GAME_SOURCES} ${RENDERER_SOURCES})
+# target_link_libraries(${PROJECT_NAME}_ut ${GTEST_BOTH_LIBRARIES})
+# target_include_directories(${PROJECT_NAME}_ut PUBLIC inc ${CMAKE_CURRENT_BINARY_DIR}/inc)
+# target_link_libraries(${PROJECT_NAME}_ut flecs sfml-graphics sfml-audio sfml-system sfml-window GL resources)
+# target_link_libraries(${PROJECT_NAME}_ut flecs_static)
 
 # Makedir for levels
 
